Fixing layout issues.

--- a/src/docs/asciidoc/stylesheets/hazelcast.css
+++ b/src/docs/asciidoc/stylesheets/hazelcast.css
@@ -727,3 +727,9 @@ body.toc2.toc-left #toc.toc2 #toctitle { font-size: 0.9375em; }
   background: #FF5F00;
   color: #fff;
 }
+
+#toc #toctree .jstree-anchor {
+white-space: normal;
+height: inherit;
+hyphens: auto;
+}
